--- a/operator.html
+++ b/operator.html
@@ -25,23 +25,34 @@
         decrement(--, -=)
 
         2. relational operator
+        <, >, <=(less than or equalls to), >=(greater than or equalls to), !=(not equalls to)
+
+        block:
+        {
+            body of block
+        }
+
         3. logical operator
         4. comparision operator
         5. conditional operator
         6. concatinate operator
         */
-        var a = 37;
+        var a = 372;
         var b = 7;
         var rem = a % b;
         // a++;
         // a += 1
         // a = a + 1;
         // a--;
-        a -= 5;
-        a = a - 5;
-        console.log(a)
-        
-        console.log(rem)
+        // a -= 5;
+        // a = a - 5;
+        // console.log(a)
+
+        // console.log(rem)
+        if(a != 37){ // 37 not equalls to 37
+            console.log("a is less than 20")
+        }
+
     </script>
 </body>
 
