logical and comparision operator

--- a/operator.html
+++ b/operator.html
@@ -33,9 +33,10 @@
         }
 
         3. logical operator
-        4. comparision operator
-        5. conditional operator
-        6. concatinate operator
+        4. assignment operator
+        5. comparision operator
+        6. conditional operator
+        7. concatinate operator
         */
         var a = 372;
         var b = 7;
